--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,7 +13,7 @@
         width="8"
         height="2"
         depth="1"
-        color="#BBAA33"
+        color="#32CD32"
         shadow>
       </a-box>
     </a-scene>
