--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -14,6 +14,7 @@
         height="2"
         depth="1"
         color="#32CD32"
+        position="-1 3 1"
         shadow>
       </a-box>
     </a-scene>
