--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -14,8 +14,8 @@
         height="2"
         depth="1"
         color="#32CD32"
-        position="-1 3 1"
-        shadow>
+        shadow
+        position="-1 3 1">
       </a-box>
     </a-scene>
   </body>
