--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -15,7 +15,8 @@
         depth="1"
         color="#32CD32"
         shadow
-        position="-1 3 1">
+        position="-1 3 1"
+        rotation="2 2 8">
       </a-box>
     </a-scene>
   </body>
