--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -16,8 +16,9 @@
         color="#32CD32"
         shadow
         position="-1 3 1"
-        rotation="2 2 8">
       </a-box>
+        <a-box position="-2 1 -3" rotation="0 30 0" color="#FF5733"></a-box>
+        <a-plane position="1 0 -4" rotation="-70 0 0" width="2" height="2" color="#FFE633"></a-plane>
     </a-scene>
   </body>
 </html>
