--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -18,7 +18,7 @@
         position="-1 3 1"
       </a-box>
         <a-box position="1 1 -2" rotation="-20 30 0" color="#FF5733"></a-box>
-        <a-plane position="1 0 1" rotation="-20 0 0" width="8" height="8" color="#FFE633"></a-plane>
+        <a-triangle position="1 0 1" rotation="-20 0 0" width="8" height="8" color="#FFE633"></a-triangle>
     </a-scene>
   </body>
 </html>
