--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -8,17 +8,17 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <a-scene background="color: #333333">
+    <a-scene background="color: white">
       <a-box id="myBox"
-        width="8"
+        width="3"
         height="2"
         depth="1"
-        color="#32CD32"
+        color="#BBAA33"
         shadow
-        position="-1 3 1"
+        position="1 2 -3">
       </a-box>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#FF5733"></a-box>
-        <a-triangle position="1 0 1" rotation="-20 0 0" color="#FFE633"></a-triangle>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
     </a-scene>
   </body>
 </html>
