--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,11 +13,11 @@
         width="3"
         height="2"
         depth="1"
-        color="#BBAA33"
+        color="#22D7FF"
         shadow
         position="1 2 -3">
       </a-box>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#FF5B33"></a-box>
        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
     </a-scene>
   </body>
