--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -19,6 +19,7 @@
       </a-box>
       <a-box position="-1 1 -3" rotation="0 45 0" color="#FF5B33"></a-box>
        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-scene>
   </body>
 </html>
