--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -37,6 +37,7 @@
         material="src: #wood2"
         shadow
         animation="property: rotation;
+                  rotation="45 90 180"
                    to: 360 180 90;
                    dur: 3000;
                    easing: easeInOutQuad;
